# libs/core/src/infrastructure/mapper/quest.mapper.ts
@@ -1,12 +1,63 @@
-import { QuestEntity } from '@app/core/domain/game/quest/quest.entity';
+import { QuestEntity, QuestWithTasks } from '@app/core/domain/game/quest/quest.entity';
 import { Task } from '@app/core/domain/game/quest/task';
 import type { Prisma } from '@prisma/client';
-import type { quest, quest_task, tourist_spot } from '@prisma/client';
+import type { quest_task } from '@prisma/client';
 import { ModelRouteMapper } from './model-route-mapper';
 
 export class QuestMapper {
-    static prismaModelToQuestEntity(
-        prismaModel: quest & { quest_task?: quest_task[]; tourist_spot?: tourist_spot },
+    static prismaModelToQuestEntity(prismaModel: QuestWithTasks): QuestEntity {
+        return new QuestEntity(
+            {
+                questName: prismaModel.quest_name,
+                questDesc: prismaModel.quest_desc,
+                questType: prismaModel.quest_type,
+                questImage: prismaModel.quest_image ?? undefined,
+                isUnlocked: prismaModel.is_unlocked,
+                isPremium: prismaModel.is_premium,
+                totalMagatamaPointAwarded: prismaModel.total_magatama_point_awarded ?? 0,
+                rewardType: prismaModel.reward_type,
+                delFlag: prismaModel.del_flag ?? false,
+                insUserId: prismaModel.ins_user_id,
+                insDateTime: prismaModel.ins_date_time,
+                updUserId: prismaModel.upd_user_id,
+                updDateTime: prismaModel.upd_date_time,
+                requestId: prismaModel.request_id ?? undefined,
+                tasks:
+                    prismaModel.quest_task?.map(
+                        (task) =>
+                            new Task({
+                                taskId: task.quest_task_id,
+                                questId: task.quest_id,
+                                taskTheme: task.task_theme,
+                                taskType: task.task_type,
+                                taskName: task.task_name,
+                                taskDesc: task.task_desc,
+                                isUnlocked: task.is_unlocked,
+                                requiredAction: task.required_action,
+                                groupActivityMembers: task.group_activity_members as any[],
+                                selectOptions: task.select_options as any[],
+                                antiCheatRules: task.anti_cheat_rules as any,
+                                magatamaPointAwarded: task.magatama_point_awarded,
+                                totalMagatamaPointAwarded: task.total_magatama_point_awarded,
+                                delFlag: task.del_flag,
+                                insUserId: task.ins_user_id,
+                                insDateTime: task.ins_date_time,
+                                updUserId: task.upd_user_id,
+                                updDateTime: task.upd_date_time,
+                                requestId: task.request_id ?? undefined,
+                            }),
+                    ) ?? [],
+                touristSpot: prismaModel.tourist_spot
+                    ? ModelRouteMapper.prismaModelToTouristSpotEntity(prismaModel.tourist_spot)
+                    : undefined,
+            },
+            prismaModel.quest_id,
+        );
+    }
+
+    static prismaModelToQuestEntityWithUserCompletedTasks(
+        prismaModel: QuestWithTasks,
+        userCompletedTasks: string[],
     ): QuestEntity {
         return new QuestEntity(
             {
@@ -47,6 +98,7 @@ export class QuestMapper {
                                 updUserId: task.upd_user_id,
                                 updDateTime: task.upd_date_time,
                                 requestId: task.request_id ?? undefined,
+                                isCompleted: userCompletedTasks.includes(task.quest_task_id),
                             }),
                     ) ?? [],
                 touristSpot: prismaModel.tourist_spot
